force-app/main/default/objects/AI_Configuration__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>The OpenRouter API key used to call the AI models.</description>
    <label>API Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>