force-app/main/default/objects/AI_Configuration__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <description>The maximum number of tokens to generate in the AI response.</description>
    <label>Max Tokens</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>