force-app/main/default/objects/AI_Configuration__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>The OpenRouter model identifier used for AI chat completions. Example: anthropic/claude-3.5-sonnet</description>
    <label>Model</label>
    <type>Text</type>
    <length>100</length>
</CustomField>