force-app/main/default/objects/AI_Configuration__mdt/fields/System_Prompt__c.field-meta.xml
<CustomField>
    <fullName>System_Prompt__c</fullName>
    <description>The base system prompt template sent to the AI model, instructing it how to behave as an inside sales assistant.</description>
    <label>System Prompt</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>