force-app/main/default/objects/AI_Configuration__mdt/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>The sampling temperature for the AI model (0.0 - 1.0).</description>
    <label>Temperature</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>